--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Damodya97.github.io/tjbudget2025/",
+  "homepage": "https://Damodya97.github.io/tjbudget2025",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
